--- a/src/Webpages/signup.html
+++ b/src/Webpages/signup.html
@@ -8,17 +8,21 @@
     <link rel ="stylesheet" href="signup.css">
 </head>
 <body>
-    <div class="container"><br>
+    <form class="container"><br>
         <label class="label">Register</label><br><br>
-        <input type="text" id="username" placeholder="UserName"><br><br>
-        <input type="text" id="firstname" placeholder="FirstName"><br><br>
-        <input type="text" id="lastname" placeholder="LastName"><br><br>
-        <input type="email" id="email" placeholder="Email"><br><br>
-        <input type="password" id="password" placeholder="Password"><br><br>
-        <input type="password" id="conformpassword" placeholder="Confirm Password"><br><br>
+        <input type="text" placeholder="UserName" name="username" required><br><br>
+        <input type="text" placeholder="FirstName" name="fname" required><br><br>
+        <input type="text" placeholder="LastName" name="lname" required><br><br>
+        <input type="phone" placeholder="Mobile Number 1" name="mobile1" required><br><br>
+        <input type="phone" placeholder="Mobile Number 2" name="mobile2"><br><br>
+        <input type="email" placeholder="Email" name="email" required><br><br>
+        <input type="password" placeholder="Password" name="password" required><br><br>
+        <input type="password" placeholder="Confirm Password" name="cpassword" required><br><br>
         <label id="dob">Date Of Birth </label>
-        <input type="date"  placeholder="Date-of-birth"><br><br>
-        <button id="signup">Sign Up</button>
-    </div>
+        <input type="date" name="dob" required><br><br>
+        <i style="color: white; font-size: 20px; text-align: left;">Gender  : </i> <input type="radio" name="gender" value="Male"><i style="color: white;">Male</i>
+        <input type="radio" name="gender" value="Female"><i style="color:white">Female</i><br><br>
+        <button id="signup" type="submit">Sign Up</button>
+    </form>
 </body>
 </html>
