--- a/src/html/login.html
+++ b/src/html/login.html
@@ -20,7 +20,7 @@
              <div id="check" ><input type="checkbox" name="check" value="agree" required/> I Agree with terms and condition.</div><br/>
              <button class="login">Login</button><br/><br/>
              <a href="" id="forgetpassword">Forget Password ?</a><br>
-             <span id="account">Don't Have an Account </span><a href="./signup.html" id="signup">Sign Up</a>
+             <span id="account">Don't Have an Account </span><a href="/signup" id="signup">Sign Up</a>
              
     </form>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
